src/Components/DisplayArea/Gallery/Gallery.scss
@use '../../../index.scss' as i;

.Gallery {
    .galleryHeaderContainer {
        padding: 50px 30px 50px 50px;
        img {
            height: 50vh;
            width: 100%;
            position: relative;
            box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
        }

        h2 {
            margin: 0;
            padding: 30px;
            width: fit-content;
            font-size: 2rem;
            background-color: i.$fourth_color;
            color: i.$first_color;
            text-align: right;
            position: absolute;
            top: 300px;
            box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
            border-radius: 10px 0px 0px 10px;
        }
    }

    .gallery {
        padding: 0 100px 100px;
        transition: .3s;

        &__thumb {
            position: relative;

            &:hover {
                .gallery__caption {
                    opacity: 1;
                }
            }
        }

        &__row {
            width: 100%;
            display: flex;
            justify-content: space-evenly;

        }

        &__image {
            width: 300px;
            height: 250px;
            transition: .3s;
            box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
            border-radius: 20px;

            &:hover {
                transform: scale(1.1);
                box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
            }
        }

        &__caption {
            position: absolute;
            bottom: 0;
            left: 70px;
            width: 300px;
            font-family: 'Raleway', sans-serif;
            font-size: 16px;
            color: white;
            opacity: 0;
            background: linear-gradient(0deg, rgba(0, 0, 0, .5) 0%, rgba(255, 255, 255, 0) 100%);
            transition: .3s;
        }
    }
}

